    * When writing echo's to log the log file is created in the begin sections and permissions are set to 666 so later launches of instl can append to log.
    * For many files that are created during instl run permissions are set to 666.
    * Moved  the curl config file to a local directory instead of being in the bookkeeping directory.
    * Fixed echo function on Mac - it was missing quotes.

    programmer visible changes:
    * BatchAccumulator new sections: begin happens after pre & assign and before links
    * ConfigVarList.__resolve_stack is now a class member.
    * ConfigVarList.resolve, when joining values will not join None values.

    user visible changes, admin:
    * When taring bzip2 is used instead of zip (--use-compress-program bzip2 instead of -z). Using zip
        created a different tar file every time something was re-tarred. This caused redundant uploads
        SVN and S3 of files that were not really different.
    * In GUI mode /Admin added indication to SVN repo and S3 bucket.
    * Fixed misleading messages in up-repo-rev


4/12/2014 0.9.19.2

    user visible changes, client:
    * In gui mode: fixed saving state on Quit which failed to work after removing the Quit button.
    * copy_dir_files_to_dir with rsync fixed to really copy only files.

    user visible changes, admin:
    * New variable __INSTL_LAUNCH_COMMAND__ based on new function get_instl_launch_command.
        Will enable running instl from batch file if instl was compiled and if it was not.
    * New variable __USER_DESKTOP_DIR__

    programmer visible changes:
    * Added a flag to ConfigVarList.resolve to allow raising an exception if string was not fully resolved.
        This is useful when dealing with the file system (read file, make dir, ...) and will prevent,
        for example, creations of folders named "$(COMPANY_NAME)".
    * Shorten some variable names,

    gui mode changes: