@@ -7,6 +7,7 @@ __INSTL_VERSION__:
     - 3
 
 __USER_CONFIG_FILE_NAME__: instl_config.yaml
+__USER_CONFIG_FILE_PATH__: $(__USER_HOME_DIR__)/$(__USER_CONFIG_FILE_NAME__)
 
 --- !define
 
