@@ -96,7 +96,7 @@ class InstlInstanceBase(object):
                         pyinstl.log_utils.debug_logging_started))
 
     def read_user_config(self):
-        user_config_path = var_list.resolve("$(__USER_HOME_DIR__)/$(__USER_CONFIG_FILE_NAME__)")
+        user_config_path = var_list.resolve("$(__USER_CONFIG_FILE_PATH__)")
         if os.path.isfile(user_config_path):
             self.read_yaml_file(user_config_path)
 
